---
source: crates/lexer/tests/lib.rs
assertion_line: 20
expression: identifiers

---
# Input

    null
    undefined
    true
    false
    aaa
    
---
# Output
[
    Token {
        kind: Null,
        offset: 0,
        len: 4,
    },
    Token {
        kind: Newline,
        offset: 5,
        len: 1,
    },
    Token {
        kind: WhiteSpace,
        offset: 6,
        len: 3,
    },
    Token {
        kind: Undefined,
        offset: 9,
        len: 9,
    },
    Token {
        kind: Newline,
        offset: 19,
        len: 1,
    },
    Token {
        kind: WhiteSpace,
        offset: 20,
        len: 3,
    },
    Token {
        kind: True,
        offset: 23,
        len: 4,
    },
    Token {
        kind: Newline,
        offset: 28,
        len: 1,
    },
    Token {
        kind: WhiteSpace,
        offset: 29,
        len: 3,
    },
    Token {
        kind: False,
        offset: 32,
        len: 5,
    },
    Token {
        kind: Newline,
        offset: 38,
        len: 1,
    },
    Token {
        kind: WhiteSpace,
        offset: 39,
        len: 3,
    },
    Token {
        kind: Ident,
        offset: 42,
        len: 3,
    },
    Token {
        kind: EOF,
        offset: 45,
        len: 1,
    },
]
